# Open-Qube

./: .clang-format  .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  Enemy.cpp  Enemy.hpp  EnemyGroup.cpp  EnemyGroup.hpp  Entity.cpp  Entity.hpp  HealthBar.cpp  HealthBar.hpp  LICENSE  Qube-main.cpp  Qube.cpp  Qube.hpp  README.md  RandGen.cpp  RandGen.hpp
